video track subtitles

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,15 @@
   <script src="index.js"></script>
 </head>
 <body>
-  <h1>Hi!</h1>
-  <p>This file was first created using the Yeoman generator <code>generator-hchiam-learning</code>: <a href="https://www.npmjs.com/package/generator-hchiam-learning" target="_blank">https://www.npmjs.com/package/generator-hchiam-learning</a></p>
+  <video preload="metadata" controls>
+    <source src="http://res.cloudinary.com/dougsillars/video/upload/w_960/v1534228645/30s4kbbb_oblsgc.mp4"
+            type="video/mp4">
+    <track src="subtitles.vtt"
+           default
+           label="English subtitles"
+           kind="subtitles"
+           srclang="en">
+  </video>
 </body>
 </html>
 
