add comment for further learning

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script src="index.js"></script>
 </head>
 <body>
+  <!-- for further learning https://github.com/hchiam/learning-web-video-and-image/blob/master/src/index.html -->
   <video preload="metadata" controls>
     <source src="http://res.cloudinary.com/dougsillars/video/upload/w_960/v1534228645/30s4kbbb_oblsgc.mp4"
             type="video/mp4">
