--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <script src="index.js"></script>
 </head>
 <body>
+  <a href="#start-of-main-content"
+     autofocus
+     id="skip-link">Skip to main content</a>
   <!-- for further learning https://github.com/hchiam/learning-web-video-and-image/blob/master/src/index.html -->
   <video preload="metadata" controls>
     <source src="http://res.cloudinary.com/dougsillars/video/upload/w_960/v1534228645/30s4kbbb_oblsgc.mp4"
@@ -19,6 +22,12 @@
            kind="subtitles"
            srclang="en">
   </video>
+  <section>
+    <a id="start-of-main-content" href="#">Some test main content.</a>
+    <a href="#">Other content.</a>
+    <a href="#">Other content.</a>
+    <a href="#">Other content.</a>
+  </section>
 </body>
 </html>
 
