"read more" link with aria-label that is more descriptive

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,8 @@
            srclang="en">
   </video>
   <section>
-    <a id="start-of-main-content" href="#">Some test main content.</a>
-    <a href="#">Other content.</a>
-    <a href="#">Other content.</a>
-    <a href="#">Other content.</a>
+    <p><a id="start-of-main-content" href="#">Some test main content.</a></p>
+    <p>Want to see more things you can do with video? <a href="https://github.com/hchiam/learning-web-video-and-image/blob/master/src/index.html" aria-label="Read more about video here">Read more</a>.</p>
   </section>
 </body>
 </html>
