a11y-friendly drag and drop

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title></title>
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
+  <script src="https://unpkg.com/drag-on-drop"></script>
 </head>
 <body>
   <a href="#start-of-main-content"
@@ -26,6 +26,25 @@
     <p><a id="start-of-main-content" href="#">Some test main content.</a></p>
     <p>Want to see more things you can do with video? <a href="https://github.com/hchiam/learning-web-video-and-image/blob/master/src/index.html" aria-label="Read more about video here">Read more</a>.</p>
   </section>
+  <section>
+    <p><a id="accessible-drag-and-drop" href="#">Accessible Drag and Drop Example:</a></p>
+    <p id="dragon-helper">Tab to an item. Hit space or enter to "grab" or "ungrab" a list item. Use the arrow keys to re-order the list item. You can also use your mouse to drag or re-order. To cancel the re-ordering, hit escape.</p>
+    <ul id="dragon">
+      <li>
+    <button aria-describedby="dragon-helper">Reorder Item 1</button>
+    <span>Item 1</span>
+      </li>
+      <li>
+    <button aria-describedby="dragon-helper">Reorder Item 2</button>
+    <span>Item 2</span>
+      </li>
+      <li>
+    <button aria-describedby="dragon-helper">Reorder Item 3</button>
+    <span>Item 3</span>
+      </li>
+    </ul>
+  </section>
+  <script src="index.js"></script>
 </body>
 </html>
 
