--- a/src/index.html
+++ b/src/index.html
@@ -23,11 +23,11 @@
            srclang="en">
   </video>
   <section>
-    <p><a id="start-of-main-content" href="#">Some test main content.</a></p>
+    <h2 id="start-of-main-content">Some test main content.</h2>
     <p>Want to see more things you can do with video? <a href="https://github.com/hchiam/learning-web-video-and-image/blob/master/src/index.html" aria-label="Read more about video here">Read more</a>.</p>
   </section>
   <section>
-    <p><a id="accessible-drag-and-drop" href="#">Accessible Drag and Drop Example:</a></p>
+    <h2 id="accessible-drag-and-drop">Accessible Drag and Drop Example:</h2>
     <p id="dragon-helper">Tab to an item. Hit space or enter to "grab" or "ungrab" a list item. Use the arrow keys to re-order the list item. You can also use your mouse to drag or re-order. To cancel the re-ordering, hit escape.</p>
     <ul id="dragon">
       <li>
