enter or spacebar

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   </section>
   <section>
     <h2 id="accessible-drag-and-drop">Accessible Drag and Drop Example:</h2>
-    <p id="dragon-helper">Tab to an item. Hit space or enter to "grab" or "drop" a list item. Use the arrow keys to re-order the list item. You can also use your mouse to drag or re-order. To cancel the re-ordering, hit escape.</p>
+    <p id="dragon-helper">Tab to an item. Hit enter or spacebar to "grab" or "drop" a list item. Use the arrow keys to re-order the list item. You can also use your mouse to drag or re-order. To cancel the re-ordering, hit escape.</p>
     <ul id="dragon">
       <li>
     <button aria-describedby="dragon-helper">Reorder Item 1</button>
